update url for demo

--- a/client/views/qrProfile/qrProfile.html
+++ b/client/views/qrProfile/qrProfile.html
@@ -14,9 +14,7 @@
           {{#with exampleDoc}}
           {{firstName}} {{lastName}}<br>
           {{address.street}}, {{address.city}} {{address.state}} {{address.postalCode}} <br>
-        <!--        {{> QrCode text="http://192.168.1.104:3000/post/socialSecurityNumber"}} -->
-
-        {{> QrCode text=qrlText}}
+        {{> QrCode text="http://globalhack.meteorapp.com/updateClient"}}
           {{/with}}
 
         </div>
