--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -9,9 +9,11 @@
 
 <template name="header">
     <h2>Client and Agency Information System</h2>
+
     <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
+
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
             <span class="sr-only">Toggle navigation</span>
@@ -21,7 +23,9 @@
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
+
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          {{#if currentUser}}
           <ul class="nav navbar-nav">
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Client <span class="caret"></span></a>
@@ -44,14 +48,17 @@
 
             </li>
           </ul>
+          {{/if}}
           <form class="navbar-form navbar-left">
+            {{#if currentUser}}
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Search">
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
+            {{/if}}
+            {{> loginButtons}}
           </form>
         </div>
-
       </div><!-- /.container-fluid -->
     </nav>
 </template>
